--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,6 @@ body {
   justify-content: center;
   text-align: center;
   align-items: center;
-  margin: 0;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
@@ -102,6 +101,7 @@ body {
   color: white;
   padding-bottom: 50px;
   animation: text 3s 1;
+  margin:3%;
 }
 
 @keyframes text {
@@ -111,7 +111,8 @@ body {
 }
 
 .Alyssa-searchbar {
-  width: 600px;
+  max-width: 600px;
+  width: 90%;
   padding-left: 36px;
   background-image: url(https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png);
   background-size: 20px;
@@ -152,41 +153,23 @@ body {
   background-position: right center;
 }
 
-.Alyssa-jumbotext {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  margin: 10px;
-  background-color: #3f4857;
-  color: white;
-}
 
 .Alyssa-sec2 {
   display: flex;
-  justify-content: center;
-  margin: 20px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
   min-height: 100vh;
-  align-content: center;
+  color: white;
+  margin:5px auto;
 }
 
-.Alyssa-bold {
-  font-weight: bolder;
-}
 
-.Alyssa-space {
-  margin-top: 30px;
-}
+
+
 
 /* // Small devices (landscape phones, 576px and up) */
 @media (min-width: 100px) {
-  .d-block .w-100 .img-responsive {
-    height: 360px;
-  }
-  .card-body {
-    font-size: 12px;
-  }
 }
 
 /* // Medium devices (tablets, 768px and up) */
